--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Feb 11 2023 10:09:57 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Feb 11 2023 10:15:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63e65c296e8aeb42d7557812" data-wf-site="63c2bc3d4e25187182bf2f18">
 <head>
   <meta charset="utf-8">
@@ -44,7 +44,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <header class="section-header5">
     <div class="page-padding home">
       <div class="container-large">
-        <div class="header-100vh"><img src="images/MechWorx-with-White.png" loading="lazy" width="417" sizes="(max-width: 479px) 92vw, (max-width: 991px) 417px, 100vw" srcset="images/MechWorx-with-White-p-500.png 500w, images/MechWorx-with-White-p-800.png 800w, images/MechWorx-with-White-p-1080.png 1080w, images/MechWorx-with-White.png 1200w" alt="" class="image-8">
+        <div class="header-100vh">
+          <div class="large-logo"><img class="image-2" src="images/MechWorx-with-White.png" width="373" alt="" style="opacity:0" sizes="(max-width: 479px) 92vw, (max-width: 991px) 373px, 36vw" data-w-id="25ee2474-c0ac-0cba-3f7d-2ffee1070c14" loading="lazy" srcset="images/MechWorx-with-White-p-500.png 500w, images/MechWorx-with-White-p-800.png 800w, images/MechWorx-with-White-p-1080.png 1080w, images/MechWorx-with-White.png 1200w"></div>
           <div data-w-id="a83e2bbc-f0fc-88d8-848e-e839bc2014cd" style="opacity:0" class="padding-vertical padding-xhuge">
             <div class="max-width-medium">
               <div class="margin-bottom margin-small">
@@ -56,7 +57,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-      <div class="large-logo"><img class="image-2" src="images/MechWorx-with-White.png" width="373" alt="" style="opacity:0" sizes="(max-width: 991px) 100vw, 35vw" data-w-id="25ee2474-c0ac-0cba-3f7d-2ffee1070c14" loading="lazy" srcset="images/MechWorx-with-White-p-500.png 500w, images/MechWorx-with-White-p-800.png 800w, images/MechWorx-with-White-p-1080.png 1080w, images/MechWorx-with-White.png 1200w"></div>
     </div>
     <div class="cta4_background-image-wrapper">
       <div class="image-overlay-layer"></div>
