--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Feb 11 2023 10:15:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Feb 11 2023 10:18:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63e65c296e8aeb42d7557812" data-wf-site="63c2bc3d4e25187182bf2f18">
 <head>
   <meta charset="utf-8">
@@ -11,6 +11,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/mechworx.webflow.css" rel="stylesheet" type="text/css">
+  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="25ee2474-c0ac-0cba-3f7d-2ffee1070c14"] {opacity:0;}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="25ee2474-c0ac-0cba-3f7d-2ffee1070c14"] {opacity:0;}}</style>
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -45,7 +46,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="page-padding home">
       <div class="container-large">
         <div class="header-100vh">
-          <div class="large-logo"><img class="image-2" src="images/MechWorx-with-White.png" width="373" alt="" style="opacity:0" sizes="(max-width: 479px) 92vw, (max-width: 991px) 373px, 36vw" data-w-id="25ee2474-c0ac-0cba-3f7d-2ffee1070c14" loading="lazy" srcset="images/MechWorx-with-White-p-500.png 500w, images/MechWorx-with-White-p-800.png 800w, images/MechWorx-with-White-p-1080.png 1080w, images/MechWorx-with-White.png 1200w"></div>
+          <div class="large-logo"><img src="images/MechWorx-with-White.png" loading="lazy" width="373" data-w-id="25ee2474-c0ac-0cba-3f7d-2ffee1070c14" srcset="images/MechWorx-with-White-p-500.png 500w, images/MechWorx-with-White-p-800.png 800w, images/MechWorx-with-White-p-1080.png 1080w, images/MechWorx-with-White.png 1200w" sizes="(max-width: 479px) 92vw, (max-width: 991px) 373px, 36vw" alt="" class="image-2"></div>
           <div data-w-id="a83e2bbc-f0fc-88d8-848e-e839bc2014cd" style="opacity:0" class="padding-vertical padding-xhuge">
             <div class="max-width-medium">
               <div class="margin-bottom margin-small">
